# Copyright (c) Open Enclave SDK contributors.
# Licensed under the MIT License.

cmake_minimum_required(VERSION 3.0.0)
project("syscallfuzzer" LANGUAGES C CXX)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 14)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)

set(FILE_DESCRIPTORS_SOURCES
  fds/bpf.c
  fds/drm.c
  fds/epoll.c
  fds/eventfd.c
  fds/fanotify_init.c
  fds/fds.c
  fds/files.c
  fds/inotify.c
  fds/memfd.c
  fds/perf.c
  fds/pipes.c
  fds/sockets.c
  fds/testfiles.c
  fds/timerfd.c
  fds/userfaultfd.c)

set(IOCTL_SOURCES
  ioctls/autofs.c
  ioctls/binder.c
  ioctls/btrfs-control.c
  ioctls/btrfs.c
  ioctls/cdrom.c
  ioctls/dm.c
  ioctls/drm.c
  ioctls/ext.c
  ioctls/firewire.c
  ioctls/framebuffer.c
  ioctls/hpet.c
  ioctls/input.c
  ioctls/ioctls.c
  ioctls/kvm.c
  ioctls/logger.c
  ioctls/loop.c
  ioctls/mce.c
  ioctls/msr.c
  ioctls/mtd.c
  ioctls/nvme.c
  ioctls/ozwpan.c
  ioctls/random.c
  ioctls/rfkill.c
  ioctls/rtc.c
  ioctls/scsi.c
  ioctls/sgx.c
  ioctls/sisfb.c
  ioctls/snd.c
  ioctls/socket.c
  ioctls/uinput.c
  ioctls/usbmon.c
  ioctls/vfio.c
  ioctls/vfs.c
  ioctls/vhost.c
  ioctls/videodev2.c
  ioctls/vmci.c
  ioctls/vsock.c
  ioctls/vt.c
  ioctls/watchdog.c)

set (MM_SOURCES 
  mm/fault-read.c
  mm/fault-write.c
  mm/maps-initial.c
  mm/maps.c)

set (NET_SOURCES 
  net/bpf.c
  net/domains.c
  net/ether.c
  net/proto-alg.c
  net/proto-appletalk.c
  net/proto-atm.c
  net/proto-ax25.c
  net/proto-bluetooth.c
  net/proto-caif.c
  net/proto-can.c
  net/proto-decnet.c
  net/proto-econet.c
  net/proto-icmp6.c
  net/proto-ip-dccp.c
  net/proto-ip-raw.c
  net/proto-ip-sctp.c
  net/proto-ip-tcp.c
  net/proto-ip-udp.c
  net/proto-ip-udplite.c
  net/proto-ipv4.c
  net/proto-ipv6.c
  net/proto-ipx.c
  net/proto-irda.c
  net/proto-iucv.c
  net/proto-kcm.c
  net/proto-llc.c
  net/proto-netlink.c
  net/proto-netrom.c
  net/proto-nfc.c
  net/proto-packet.c
  net/proto-phonet.c
  net/proto-pppox.c
  net/proto-qrtr.c
  net/proto-rds.c
  net/proto-rose.c
  net/proto-rxrpc.c
  net/proto-smc.c
  net/proto-tipc.c
  net/proto-unix.c
  net/proto-x25.c
  net/proto-xdp.c
  net/protocols.c
  net/sockaddr.c)

set(RAND_SOURCES 
  rand/interesting-numbers.c
  rand/random-address.c
  rand/random-length.c
  rand/random-page.c
  rand/random.c
  rand/seed.c)

set(SYSCALL_SOURCES 
  syscalls/x86/x86_64/arch_prctl.c
  syscalls/x86/ioperm.c
  syscalls/x86/iopl.c
  syscalls/x86/modify_ldt.c
  syscalls/accept.c
  syscalls/access.c
  syscalls/acct.c
  syscalls/add_key.c
  syscalls/adjtimex.c
  syscalls/alarm.c
  syscalls/bdflush.c
  syscalls/bind.c
  syscalls/bpf.c
  syscalls/brk.c
  syscalls/capget.c
  syscalls/capset.c
  syscalls/chdir.c
  syscalls/chmod.c
  syscalls/chown.c
  syscalls/chroot.c
  syscalls/clock_adjtime.c
  syscalls/clock_getres.c
  syscalls/clock_gettime.c
  syscalls/clock_nanosleep.c
  syscalls/clock_settime.c
  syscalls/clone.c
  syscalls/clone3.c
  syscalls/close_range.c
  syscalls/close.c
  syscalls/connect.c
  syscalls/copy_file_range.c
  syscalls/creat.c
  syscalls/delete_module.c
  syscalls/dup.c
  syscalls/epoll_create.c
  syscalls/epoll_ctl.c
  syscalls/epoll_pwait.c
  syscalls/epoll_wait.c
  syscalls/eventfd.c
  syscalls/execve.c
  syscalls/exit_group.c
  syscalls/exit.c
  syscalls/faccessat.c
  syscalls/fadvise64.c
  syscalls/fallocate.c
  syscalls/fanotify_init.c
  syscalls/fanotify_mark.c
  syscalls/fchdir.c
  syscalls/fchmod.c
  syscalls/fchown.c
  syscalls/fcntl.c
  syscalls/fdatasync.c
  syscalls/fgetxattr.c
  syscalls/finit_module.c
  syscalls/flock.c
  syscalls/fork.c
  syscalls/fremovexattr.c
  syscalls/fsconfig.c
  syscalls/fsetxattr.c
  syscalls/fsmount.c
  syscalls/fsopen.c
  syscalls/fspick.c
  syscalls/fstat64.c
  syscalls/fstatfs.c
  syscalls/fsync.c
  syscalls/ftruncate.c
  syscalls/futex.c
  syscalls/futimesat.c
  syscalls/get_mempolicy.c
  syscalls/get_robust_list.c
  syscalls/getcpu.c
  syscalls/getcwd.c
  syscalls/getdents.c
  syscalls/getegid.c
  syscalls/geteuid.c
  syscalls/getgid.c
  syscalls/getgroups.c
  syscalls/getitimer.c
  syscalls/getpagesize.c
  syscalls/getpeername.c
  syscalls/getpgid.c
  syscalls/getpgrp.c
  syscalls/getpid.c
  syscalls/getppid.c
  syscalls/getpriority.c
  syscalls/getrandom.c
  syscalls/getresgid.c
  syscalls/getresuid.c
  syscalls/getrlimit.c
  syscalls/getrusage.c
  syscalls/getsid.c
  syscalls/getsockname.c
  syscalls/getsockopt.c
  syscalls/gettid.c
  syscalls/gettimeofday.c
  syscalls/getuid.c
  syscalls/getxattr.c
  syscalls/init_module.c
  syscalls/inotify_add_watch.c
  syscalls/inotify_init.c
  syscalls/inotify_rm_watch.c
  syscalls/io_cancel.c
  syscalls/io_destroy.c
  syscalls/io_getevents.c
  syscalls/io_pgetevents.c
  syscalls/io_setup.c
  syscalls/io_submit.c
  syscalls/io_uring_enter.c
  syscalls/io_uring_register.c
  syscalls/io_uring_setup.c
  syscalls/ioctl.c
  syscalls/ioprio_get.c
  syscalls/ioprio_set.c
  syscalls/ipc.c
  syscalls/kcmp.c
  syscalls/kexec_file_load.c
  syscalls/kexec_load.c
  syscalls/keyctl.c
  syscalls/kill.c
  syscalls/lchown.c
  syscalls/lgetxattr.c
  syscalls/link.c
  syscalls/linkat.c
  syscalls/listen.c
  syscalls/listxattr.c
  syscalls/llseek.c
  syscalls/lookup_dcookie.c
  syscalls/lremovexattr.c
  syscalls/lseek.c
  syscalls/lsetxattr.c
  syscalls/lstat.c
  syscalls/madvise.c
  syscalls/mbind.c
  syscalls/membarrier.c
  syscalls/memfd_create.c
  syscalls/migrate_pages.c
  syscalls/mincore.c
  syscalls/mkdir.c
  syscalls/mknod.c
  syscalls/mlock.c
  syscalls/mlockall.c
  syscalls/mmap.c
  syscalls/mount.c
  syscalls/move_mount.c
  syscalls/move_pages.c
  syscalls/mprotect.c
  syscalls/mq_getsetattr.c
  syscalls/mq_notify.c
  syscalls/mq_open.c
  syscalls/mq_timedreceive.c
  syscalls/mq_timedsend.c
  syscalls/mq_unlink.c
  syscalls/mremap.c
  syscalls/msgctl.c
  syscalls/msgget.c
  syscalls/msgrcv.c
  syscalls/msgsnd.c
  syscalls/msync.c
  syscalls/munlock.c
  syscalls/munlockall.c
  syscalls/munmap.c
  syscalls/name_to_handle_at.c
  syscalls/nanosleep.c
  syscalls/newfstat.c
  syscalls/newlstat.c
  syscalls/newstat.c
  syscalls/newuname.c
  syscalls/nfsservctl.c
  syscalls/ni_syscall.c
  syscalls/nice.c
  syscalls/oldreaddir.c
  syscalls/oldumount.c
  syscalls/olduname.c
  syscalls/open_tree.c
  syscalls/open.c
  syscalls/pause.c
  syscalls/pciconfig_iobase.c
  syscalls/pciconfig_read.c
  syscalls/pciconfig_write.c
  syscalls/perf_event_open.c
  syscalls/personality.c
  syscalls/pidfd_getfd.c
  syscalls/pidfd_open.c
  syscalls/pidfd_send_signal.c
  syscalls/pipe.c
  syscalls/pivot_root.c
  syscalls/pkey.c
  syscalls/poll.c
  syscalls/prctl.c
  syscalls/prlimit64.c
  syscalls/process_vm_readv.c
  syscalls/process_vm_writev.c
  syscalls/pselect6.c
  syscalls/ptrace.c
  syscalls/quotactl.c
  syscalls/read.c
  syscalls/readahead.c
  syscalls/readlink.c
  syscalls/reboot.c
  syscalls/recv.c
  syscalls/remap_file_pages.c
  syscalls/removexattr.c
  syscalls/rename.c
  syscalls/request_key.c
  syscalls/restart_syscall.c
  syscalls/rmdir.c
  syscalls/rseq.c
  syscalls/rt_sigpending.c
  syscalls/rt_sigprocmask.c
  syscalls/rt_sigqueueinfo.c
  syscalls/rt_sigreturn.c
  syscalls/rt_sigsuspend.c
  syscalls/rt_sigtimedwait.c
  syscalls/rt_tgsigqueueinfo.c
  syscalls/sched_get_priority_max.c
  syscalls/sched_get_priority_min.c
  syscalls/sched_getaffinity.c
  syscalls/sched_getattr.c
  syscalls/sched_getparam.c
  syscalls/sched_getscheduler.c
  syscalls/sched_rr_get_interval.c
  syscalls/sched_setaffinity.c
  syscalls/sched_setattr.c
  syscalls/sched_setparam.c
  syscalls/sched_setscheduler.c
  syscalls/sched_yield.c
  syscalls/seccomp.c
  syscalls/select.c
  syscalls/semctl.c
  syscalls/semget.c
  syscalls/semop.c
  syscalls/semtimedop.c
  syscalls/send.c
  syscalls/sendfile.c
  syscalls/set_mempolicy.c
  syscalls/set_robust_list.c
  syscalls/set_tid_address.c
  syscalls/setdomainname.c
  syscalls/setfsgid.c
  syscalls/setfsuid.c
  syscalls/setgid.c
  syscalls/setgroups.c
  syscalls/sethostname.c
  syscalls/setitimer.c
  syscalls/setns.c
  syscalls/setpgid.c
  syscalls/setpriority.c
  syscalls/setregid.c
  syscalls/setresgid.c
  syscalls/setresuid.c
  syscalls/setreuid.c
  syscalls/setrlimit.c
  syscalls/setsid.c
  syscalls/setsockopt.c
  syscalls/settimeofday.c
  syscalls/setuid.c
  syscalls/setxattr.c
  syscalls/sgetmask.c
  syscalls/shmat.c
  syscalls/shmctl.c
  syscalls/shmdt.c
  syscalls/shmget.c
  syscalls/shutdown.c
  syscalls/sigaction.c
  syscalls/sigaltstack.c
  syscalls/signal.c
  syscalls/signalfd.c
  syscalls/sigpending.c
  syscalls/sigprocmask.c
  syscalls/sigreturn.c
  syscalls/sigsuspend.c
  syscalls/socket.c
  syscalls/socketcall.c
  syscalls/socketpair.c
  syscalls/splice.c
  syscalls/ssetmask.c
  syscalls/stat.c
  syscalls/statfs.c
  syscalls/stime.c
  syscalls/swap.c
  syscalls/symlink.c
  syscalls/sync_file_range.c
  syscalls/sync.c
  syscalls/syncfs.c
  syscalls/syscalls.h
  syscalls/sysctl.c
  syscalls/sysfs.c
  syscalls/sysinfo.c
  syscalls/syslog.c
  syscalls/tee.c
  syscalls/tgkill.c
  syscalls/time.c
  syscalls/timer_create.c
  syscalls/timer_delete.c
  syscalls/timer_getoverrun.c
  syscalls/timer_gettime.c
  syscalls/timer_settime.c
  syscalls/timerfd_create.c
  syscalls/timerfd_gettime.c
  syscalls/timerfd_settime.c
  syscalls/times.c
  syscalls/tkill.c
  syscalls/truncate.c
  syscalls/umask.c
  syscalls/umount.c
  syscalls/uname.c
  syscalls/unlink.c
  syscalls/unshare.c
  syscalls/uselib.c
  syscalls/userfaultfd.c
  syscalls/ustat.c
  syscalls/utime.c
  syscalls/utimensat.c
  syscalls/utimes.c
  syscalls/vfork.c
  syscalls/vhangup.c
  syscalls/vmsplice.c
  syscalls/wait4.c
  syscalls/waitid.c
  syscalls/waitpid.c
  syscalls/write.c)

set(TRINITY_MAIN_SOURCES 
  arg-decoder.c
  blockdevs.c
  child.c
  debug.c
  devices.c
  ftrace.c
  generate-args.c
  locks.c
  log-files.c
  log.c
  main.c
  objects.c
  output.c
  params.c
  pathnames.c
  pids.c
  post-mortem.c
  random-syscall.c
  results.c
  shm.c
  signals.c
  stats.c
  syscall.c
  sysv-shm.c
  tables-biarch.c
  tables-uniarch.c
  tables.c
  taint.c
  trinity.c
  uid.c
  utils.c)

add_executable(syscallfuzzer
  ${SYSCALL_SOURCES} 
  ${RAND_SOURCES} 
  ${NET_SOURCES} 
  ${MM_SOURCES} 
  ${IOCTL_SOURCES} 
  ${FILE_DESCRIPTORS_SOURCES}
  ${TRINITY_MAIN_SOURCES})

target_compile_definitions(syscallfuzzer 
  PRIVATE
  USE_MEMFD_CREATE=1)

target_compile_options(syscallfuzzer 
  PRIVATE 
  -D_GNU_SOURCE 
  -D__linux__
  -Wdeclaration-after-statement
  -Wformat=2
  -Winit-self
  -Wnested-externs
  -Wpacked
  -Wshadow
  -Wswitch-enum
  -Wundef
  -Wwrite-strings
  -Wno-format-nonliteral
  -Wstrict-prototypes
  -Wmissing-prototypes
  -fsigned-char
  -Wno-missing-field-initializers)

target_link_options(syscallfuzzer 
  PRIVATE 
  -rdynamic)

target_link_libraries(syscallfuzzer 
  PRIVATE
  rt
  dl)

target_include_directories(syscallfuzzer
  PRIVATE 
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/fds
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${CMAKE_CURRENT_SOURCE_DIR}/ioctls
  ${CMAKE_CURRENT_SOURCE_DIR}/mm
  ${CMAKE_CURRENT_SOURCE_DIR}/net
  ${CMAKE_CURRENT_SOURCE_DIR}/rand
  ${CMAKE_CURRENT_SOURCE_DIR}/syscalls
  ${CMAKE_CURRENT_SOURCE_DIR}/../include)
